# docmorph

./: .gitignore  Cargo.toml  deny.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
crates/docmorph-cli/: Cargo.toml
crates/docmorph-cli/src/: main.rs
crates/docmorph-cli/tests/: cli.rs
crates/docmorph-contracts/: Cargo.toml
crates/docmorph-contracts/src/: lib.rs
crates/docmorph-contracts/tests/: compatibility.rs
crates/docmorph-core/: Cargo.toml
crates/docmorph-core/src/: adapter.rs  io.rs  lib.rs  lifecycle.rs  mock.rs  registry.rs
crates/docmorph-core/tests/: io_policy.rs  lifecycle.rs  publication.rs  registry.rs
crates/docmorph-evidence/: Cargo.toml  build.rs  build_support.rs
crates/docmorph-evidence/src/: main.rs
crates/docmorph-evidence/tests/: build_support.rs  evidence.rs
docs/: README.md  implementation-roadmap.md
docs/adr/: 0001-product-boundary-platform-distribution.md  0002-rust-core-engine-adapter-boundary.md  0003-operation-result-diagnostics-provenance-contract.md  0004-pdf-engine-selection-and-licensing.md  0005-fidelity-and-deterministic-output-tiers.md  0006-safe-io-resource-policy-and-workers.md  0007-pdf-editing-and-composition-limits.md  0008-security-redaction-verification.md  0009-offline-spanish-english-ocr.md  0010-visual-and-cryptographic-signatures.md  0011-versioning-supply-chain-release-policy.md
evidence/: README.md
evidence/policy-failure/: receipt.json
evidence/success/: receipt.json
fixtures/: evidence-policy-failure-manifest.json  evidence-success-manifest.json  manifest.json
fixtures/contracts/: supported-operation-v1.json  unsupported-major-v2.json
fixtures/mock/: policy-failure-input.txt
(+1 files in other folders)
