[package]
name = "docmorph-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
docmorph-contracts = { path = "../docmorph-contracts" }
docmorph-core = { path = "../docmorph-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
sha2.workspace = true
