[package]
name = "docmorph-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
docmorph-contracts = { path = "../docmorph-contracts" }
sha2.workspace = true
rustix.workspace = true
